--- a/views/login.erb
+++ b/views/login.erb
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello, world!</title>
+  <title>Makers BnB</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
-  <link rel="stylesheet" type="text/css" href="./style.css" />
+  <link rel="stylesheet" type="text/css" href="/style.css" />
+  <%# <link rel="icon" type="image/icon" href="./images/makersbnblogo.png" /> %>
 </head>
 <body>
-  <h1> 
-    Login To MakersBNB
-  </h1>
+  <header>
+    <a href="/"><img class="logo" src="/images/makersbnblogo.png" alt="MakersBNB logo" height="100px"></a>
+    <nav>
+      <ul>
+        <li>About</li>
+        <li>Login</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1> 
+      Login To MakersBNB
+    </h1>
     <form>
       <label for='email'>Email Address: </label>
       <input type='text' name='email'>
@@ -18,6 +29,6 @@
       <input type='text' name='password'>
       <input type='submit' value='Submit'>
     </form>
-  
+  </main>
 </body>
 </html>
