--- a/views/login.erb
+++ b/views/login.erb
@@ -22,11 +22,13 @@
     <h1> 
       Login To MakersBNB
     </h1>
-    <form>
+    <h2>
+    <%= flash[:notice]%>
+    <form action='/sessions' method='post'>
       <label for='email'>Email Address: </label>
-      <input type='text' name='email'>
+      <input type='email' id ='email' name='email' required>
       <label for='password'>Password:</label>
-      <input type='text' name='password'>
+      <input type='password' name='password' required>
       <input type='submit' value='Submit'>
     </form>
   </main>
