--- a/views/login.erb
+++ b/views/login.erb
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link rel="stylesheet" type="text/css" href="/style.css" />
-  <%# <link rel="icon" type="image/icon" href="./images/makersbnblogo.png" /> %>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran&family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -14,6 +16,7 @@
     <nav>
       <ul>
         <li>About</li>
+        <li>   |   </li>
         <li>Login</li>
       </ul>
     </nav>
@@ -29,7 +32,7 @@
       <input type='email' id ='email' name='email' required>
       <label for='password'>Password:</label>
       <input type='password' name='password' required>
-      <input type='submit' value='Submit'>
+      <input id="login-submit" type='submit' value='Submit'>
     </form>
   </main>
 </body>
