so somehow lost my listings erb, and now have recreated it, need to add a back button, and a list space button, and look into displaying listings

--- a/views/login.erb
+++ b/views/login.erb
@@ -28,9 +28,9 @@
     <h2>
     <%= flash[:notice]%>
     <form action='/sessions' method='post'>
-      <label for='email' class='label_login'>Email Address: </label>
+      <label for='email' class='login'>Email Address: </label>
       <input type='email' id ='email' name='email' required>
-      <label for='password' class='label_login'>Password:</label>
+      <label for='password' class='login'>Password:</label>
       <input type='password' name='password' required>
       <input id="login-submit" type='submit' value='Submit'>
     </form>
