--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,11 @@ h1 {
   font-size: 300%;
 }
 
+h2 {
+  font-family: 'Staatliches', cursive;
+  font-size: 225%;
+}
+
 nav {
   float: right;
   margin: 37px 64px;
@@ -66,6 +71,7 @@ input {
   background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  cursor: pointer;
   text-decoration: none;
 }
 
@@ -97,5 +103,36 @@ input {
   background-image: -ms-linear-gradient(top, #3cfc89, #3498db);
   background-image: -o-linear-gradient(top, #3cfc89, #3498db);
   background-image: linear-gradient(to bottom, #3cfc89, #3498db);
+  cursor: pointer;
   text-decoration: none;
+}
+
+.btn {
+  background: #2cb8ac;
+  background-image: -webkit-linear-gradient(top, #2cb8ac, #2bb82f);
+  background-image: -moz-linear-gradient(top, #2cb8ac, #2bb82f);
+  background-image: -ms-linear-gradient(top, #2cb8ac, #2bb82f);
+  background-image: -o-linear-gradient(top, #2cb8ac, #2bb82f);
+  background-image: linear-gradient(to bottom, #2cb8ac, #2bb82f);
+  -webkit-border-radius: 12;
+  -moz-border-radius: 12;
+  border-radius: 12px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  width: 80%;
+}
+
+.btn:hover {
+  background: #3cfc89;
+  background-image: -webkit-linear-gradient(top, #3cfc89, #3498db);
+  background-image: -moz-linear-gradient(top, #3cfc89, #3498db);
+  background-image: -ms-linear-gradient(top, #3cfc89, #3498db);
+  background-image: -o-linear-gradient(top, #3cfc89, #3498db);
+  background-image: linear-gradient(to bottom, #3cfc89, #3498db);
+  text-decoration: none;
+  width: 80%;
+  cursor: pointer;
 }
