Still need to work on layout for displaying listings, as well as logic to actually display them, as well as logic for filtering the listings by date

--- a/public/style.css
+++ b/public/style.css
@@ -136,3 +136,9 @@ input {
   width: 80%;
   cursor: pointer;
 }
+
+.container {
+  border-radius: 10px;
+  background-color: antiquewhite;
+  padding: 20px
+}
