--- a/views/listings.erb
+++ b/views/listings.erb
@@ -1,57 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Makers BnB</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
-  <link rel="stylesheet" type="text/css" href="/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran&family=Staatliches&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <a href="/"><img class="logo" src="/images/makersbnblogo.png" alt="MakersBNB logo" height="100px"></a>
-    <nav>
-      <ul>
-        <li><a href="/listings">Listings</li></a>
-        <li>   |    </li>
-        <li>Requests</li>
-        <li>   |    </li>
-        <li>Sign out</li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <h1> 
-    Book a space 
-    <h2>
-    <form action='/listings/new' method='get'>
-      <label for='list'>or maybe</label><br>
-      <input type="submit" id='list' value="List a space" class="btn" >
+  <head>
+    <title>Makers BnB</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran&family=Staatliches&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <a href="/"><img class="logo" src="/images/makersbnblogo.png" alt="MakersBNB logo" height="100px"></a>
+      <nav>
+        <ul>
+          <li><a href="/listings">Listings</li></a>
+          <li>   |    </li>
+          <li>Requests</li>
+          <li>   |    </li>
+          <li>Sign out</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1> 
+        Book a space 
+        <h2>
+          <form action='/listings/new' method='get'>
+            <label for='list'>or maybe</label><br>
+            <input type="submit" id='list' value="List a space" class="btn" >
+          </form>
+        <h2>
+      </h1>
+      <h4>
+      <form action='/listings' method='get'>
+        <section class='dates'>
+          <div style="float:left;margin-left:30%; margin-right:20px;">
+            <label class='dates' for='from'>Avaliable from (DD/MM/YY)</label><br>
+            <input type='date' id ='from' name='avaliable_from'
+                    value="2021-08-24"
+                    min="2021-08-01" max="2040-12-31">
+          </div>
+          <div style="float:left;">
+            <label class='dates' for='to'>Avaliable to (DD/MM/YY)</label><br>
+                  <input type='date' id ='to' name='avaliable_to'
+                  value="2021-08-24"
+                  min="2021-08-01" max="2040-12-31">
+          </div style="float:left;">
+          <input id="listing-search" type='submit' value='Search'>
+        </section>
       </form>
-    <h2>
-    </h1>
-    <h4>
-    <form action='/listings' method='get'>
-    <section class='dates'>
-    <div style="float:left;margin-left:30%; margin-right:20px;">
-      <label class='dates' for='from'>Avaliable from (DD/MM/YY)</label><br>
-      <input type='date' id ='from' name='avaliable_from'
-              value="2021-08-24"
-              min="2021-08-01" max="2040-12-31">
+      <h4>
+      <div class="w3-container">
+        
+          <div class="w3-card-4" style="width:70%">
+            <header class="w3-container w3-light-grey">
+              <h3>Example Listing</h3>
+            </header>
+            <div class="w3-container">
+              <p>A nice place in the sun</p>
+            </div>
+            <a href="/" class="w3-button w3-block w3-dark-grey">Link Button</a>
+          </div>
+        
       </div>
-      <div style="float:left;">
-      <label class='dates' for='to'>Avaliable to (DD/MM/YY)</label><br>
-            <input type='date' id ='to' name='avaliable_to'
-             value="2021-08-24"
-             min="2021-08-01" max="2040-12-31">
-      </div style="float:left;">
-      <input id="listing-search" type='submit' value='Search'>
-    </section>
-    </form>
-    <h4>
-  </main>
-</body>
+    </main>
+  </body>
 </html>
