working on displaying listings

--- a/views/listings.erb
+++ b/views/listings.erb
@@ -52,20 +52,22 @@
           <input id="listing-search" type='submit' value='Search'>
         </section>
       </form>
-      <h4>
-      <div class="w3-container">
+      <%# <% listings.each do |listing| %>
+      <%# <div class="w3-container">
         
           <div class="w3-card-4" style="width:70%">
             <header class="w3-container w3-light-grey">
-              <h3>Example Listing</h3>
+              <%# <h3><%=listing.title%></h3>
             </header>
             <div class="w3-container">
-              <p>A nice place in the sun</p>
+              <p><%=listing.description%></p>
+              <p><%=listing.price%></p>
             </div>
-            <a href="/" class="w3-button w3-block w3-dark-grey">Link Button</a>
-          </div>
+            <a href=<%"/listing/#{listing.id}"%> class="w3-button w3-block w3-dark-grey">Link Button</a>
+          </div> %>
         
-      </div>
+      </div> %>
+      <%end%> %>
     </main>
   </body>
 </html>
