--- a/views/listings.erb
+++ b/views/listings.erb
@@ -25,49 +25,46 @@
       </nav>
     </header>
     <main>
-      <h1> 
-        Book a space 
-        <h2>
+      <h1> Book a space </h1>
+        <h2 id="or-maybe">Or Maybe</h2>
           <form action='/listings/new' method='get'>
-            <label for='list'>or maybe</label><br>
             <input type="submit" id='list' value="List a space" class="btn" >
           </form>
-        <h2>
-      </h1>
-      <h4>
-      <form action='/listings' method='get'>
-        <section class='dates'>
-          <div style="float:left;margin-left:30%; margin-right:20px;">
-            <label class='dates' for='from'>Avaliable from (DD/MM/YY)</label><br>
+
+      <section class='dates'>
+        <form action='/listings' method='get'>
+          <div class="listings-from">
+            <label for='from'>Avaliable from (DD/MM/YY)</label><br>
             <input type='date' id ='from' name='avaliable_from'
-                    value="2021-08-24"
-                    min="2021-08-01" max="2040-12-31">
-          </div>
-          <div style="float:left;">
-            <label class='dates' for='to'>Avaliable to (DD/MM/YY)</label><br>
-                  <input type='date' id ='to' name='avaliable_to'
                   value="2021-08-24"
                   min="2021-08-01" max="2040-12-31">
-          </div style="float:left;">
+          </div>
+          <div class="listings-to">
+            <label for='to'>Avaliable to (DD/MM/YY)</label><br>
+            <input type='date' id ='to' 
+                  name='avaliable_to'
+                  value="2021-08-24"
+                  min="2021-08-01" max="2040-12-31">
+          </div>
           <input id="listing-search" type='submit' value='Search'>
-        </section>
-      </form>
+        </form>
+      </section>
       <%# <% listings.each do |listing| %>
       <%# <div class="w3-container">
         
           <div class="w3-card-4" style="width:70%">
             <header class="w3-container w3-light-grey">
               <%# <h3><%=listing.title%></h3>
-            </header>
+            <%# </header>
             <div class="w3-container">
               <p><%=listing.description%></p>
-              <p><%=listing.price%></p>
-            </div>
-            <a href=<%"/listing/#{listing.id}"%> class="w3-button w3-block w3-dark-grey">Link Button</a>
-          </div> %>
-        
-      </div> %>
-      <%end%> %>
+              <%# <p><%=listing.price%></p>
+            <%# </div>
+            <%# <a href=<%"/listing/#{listing.id}"%> 
+            <%# class="w3-button w3-block w3-dark-grey">Link Button</a> %>
+          <%# </div> %> 
+      <%# </div> %>
+      <%# <% end%> 
     </main>
   </body>
 </html>
