--- a/views/login.erb
+++ b/views/login.erb
@@ -29,10 +29,10 @@
     <%= flash[:notice]%>
     <form action='/sessions' method='post'>
       <label for='email' class='login'>Email Address: </label>
-      <input type='email' id ='email' name='email' required>
+      <input class='login' type='email' id ='email' name='email' required>
       <label for='password' class='login'>Password:</label>
-      <input type='password' name='password' required>
-      <input id="login-submit" type='submit' value='Submit'>
+      <input class='login' type='password' name='password' required>
+      <input id="login-submit" class="btn" type='submit' value='Submit'>
     </form>
   </main>
 </body>
