--- a/app/views/listings/view.erb
+++ b/app/views/listings/view.erb
@@ -1,1 +1,37 @@
-Hello World!!!!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Makers BnB</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="" />
+  <link rel="stylesheet" type="text/css" href="/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran&family=Staatliches&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <a href="/"><img class="logo" src="/images/makersbnblogo.png" alt="MakersBNB logo" height="100px"></a>
+    <nav>
+      <ul>
+        <li><a href="/listings">Listings</li></a>
+        <li>   |    </li>
+        <li>Requests</li>
+        <li>   |    </li>
+        <li>Sign out</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1> 
+      <%=@listing.title%>
+    </h1>
+    <h2>
+
+    <form>
+      <input id="login-submit" class="btn" type='submit' value='Request booking'>
+    </form>
+  </main>
+</body>
+</html>
