--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -17,7 +17,7 @@
       <ul>
         <li>About</li>
         <li>   |   </li>
-        <li>Login</li>
+        <li>Sign Up</li>
       </ul>
     </nav>
   </header>
