--- a/app/views/listings/view.erb
+++ b/app/views/listings/view.erb
@@ -27,10 +27,21 @@
     <h1> 
       <%=@listing.title%>
     </h1>
-    <h2>
+    <h2> 
+      <p>
+        <%=@listing.description%>
+      </p>
+      <p>
+        £<%=@listing.price%> per night
+      </p>
+      <form action='/book' method='post'>
+        <input type='date' name='booking_date'
+                min='<%=@listing.dates_available.first%>'
+                max='<%=@listing.dates_available.last%>'>
 
-    <form>
-      <input id="login-submit" class="btn" type='submit' value='Request booking'>
+        <input type='hidden' name='listing_id' value="<%=@listing.id%>">
+        <input type='hidden' name='user_id' value="<%=@user_id%>">
+        <input id="request-submit" class="btn" type='submit' value='Request booking'>
     </form>
   </main>
 </body>
