--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -22,10 +22,7 @@
     </nav>
   </header>
   <main>
-    <h1> 
-      Login To MakersBNB
-    </h1>
-    <h2>
+    <h1> Login To MakersBNB </h1>
     <%= flash[:notice]%>
     <form action='/sessions' method='post'>
       <label for='email' class='login'>Email Address: </label>
