simplified to listing just 1 date at a time

--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -30,15 +30,13 @@
       <h1> List a new space </h1>
       <form id="list-new" action='/listings/new' method='post'>
         <label for='list-title'>Title: </label>
-        <input type='text' id ='list-title' name='list-title' required>
+        <input type='text' id ='list-title' name='list_title' required>
         <label for='list-desc'>Description: </label>
-        <input type='text' id ='list-desc' name='list-desc' required>
+        <input type='text' id ='list-desc' name='list_desc' required>
         <label for='list-price'>Price per night (£): </label> 
         <input type="number" min="0.00" step="1" value="10.00" id ='list-price' name='list-price' required>
-        <label for='list-dates'>Available from: </label>
-        <input type='date' id ='list-dates' name='list-dates' required>
-        <label for='list-dates'>Available to: </label>
-        <input type='date' id ='list-dates' name='list-dates' required>
+        <label for='list-dates'>Date available: </label>
+        <input type='date' id ='list-date' name='list_date' required>
         <input id="list-new-submit" class="btn" type='submit' value='Submit'>
       </form>
     </main>
