can't make paragraph left

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -15,7 +15,7 @@
     <a href="/"><img class="logo" src="/images/makersbnblogo.png" alt="MakersBNB logo" height="100px"></a>
     <nav>
       <ul>
-        <li>About</li>
+        <li><a href='/about'>About</a></li>
         <li>   |   </li>
         <li><a href='/sessions/new'>Login </a></li>
       </ul>
