--- a/public/style.css
+++ b/public/style.css
@@ -135,3 +135,20 @@ input.login {
 #listings {
   margin: auto;
 }
+
+#h3 {
+  width: 80%; 
+  text-align: left;
+  margin: 0 auto;
+  font-family: 'Staatliches', cursive;  
+  font-size: 200%;
+}
+
+#paragraph {
+  display: contents;
+  width: 80%; 
+  text-align: left;
+  margin: 0 auto;
+  font-family: 'Staatliches', cursive;  
+  font-size: 100%;
+}
