working on dates calendar - need to find a way to loop/filter through range of values

--- a/app/views/listings/index.erb
+++ b/app/views/listings/index.erb
@@ -33,15 +33,15 @@
       <section class='dates'>
         <form action='/listings' method='get'>
           <div class="listings-from">
-            <label for='from'>Avaliable from (DD/MM/YY)</label><br>
-            <input type='date' id ='from' name='avaliable_from'
+            <label for='from'>Available from (DD/MM/YY)</label><br>
+            <input type='date' id ='from' name='available_from'
                   value="2021-08-24"
                   min="2021-08-01" max="2040-12-31">
           </div>
           <div class="listings-to">
-            <label for='to'>Avaliable to (DD/MM/YY)</label><br>
+            <label for='to'>Available to (DD/MM/YY)</label><br>
             <input type='date' id ='to' 
-                  name='avaliable_to'
+                  name='available_to'
                   value="2021-08-24"
                   min="2021-08-01" max="2040-12-31">
           </div>
