--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -21,18 +21,14 @@
     </header>
 <main>
     <h1>About Us</h1><p><p>
-    <!----------
-    <h2 style="text-align:left">Apps</h2><p><p>
-    <p style="text-align:left">Hello</p>
-    ----->
     <div class="h3" style="width:70%">
     <h2>Apps</h2>
     </div>
-    
+ 
     <p><p>
-    <div class="paragraph">
-    <p>Hello</p>
+    <div class="main.paragraph">
+    <p class="paragraph">Hello</p>
     </div>
-
+</main>   
 </body>
 </html>
