--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,16 @@ main {
   padding: 48px 0;
 }
 
+main.paragraph {
+  text-align: left !important;
+  font-family: 'Staatliches', cursive;  
+  font-size: 100%;
+  display: contents;
+  width: 80%; 
+  margin: 0 auto;
+  padding: 48px 0;
+}
+
 h1 {
   width: 100%; 
   text-align: center;
@@ -144,11 +154,3 @@ input.login {
   font-size: 200%;
 }
 
-#paragraph {
-  display: contents;
-  width: 80%; 
-  text-align: left;
-  margin: 0 auto;
-  font-family: 'Staatliches', cursive;  
-  font-size: 100%;
-}
