navigation to sign up from login page

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -15,9 +15,9 @@
     <a href="/"><img class="logo" src="/images/makersbnblogo.png" alt="MakersBNB logo" height="100px"></a>
     <nav>
       <ul>
-        <li>About</li>
-        <li>   |   </li>
-        <li>Sign Up</li>
+        <li><a href="/about">About</a></li>
+        <li>|</li>
+        <li><a href="/">Sign Up</a></li>
       </ul>
     </nav>
   </header>
