rearranging page order to allow for requests page as homepage

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -17,7 +17,7 @@
       <ul>
         <li>About</li>
         <li>   |   </li>
-        <li>Sign Up</li>
+        <li><a href = "/sessions/new">Sign Up</a></li>
       </ul>
     </nav>
   </header>
