--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -17,7 +17,7 @@
       <ul>
         <li>About</li>
         <li>   |   </li>
-        <li><a href='/sessions/new'>Login </a></li>
+        <li><a href='/'>Login </a></li>
       </ul>
     </nav>
   </header>
