user can no longer sign up with the same email more than once

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -23,6 +23,7 @@
   </header>
   <main>
     <h1>Sign Up To MakersBNB</h1>
+    <%= flash[:notice1]%>
     <form action='/signup' method='post'>
       <label for='name' class='signup'>Name: </label>
       <input class='signup' type='text' name='name' required>
