--- a/app/views/homepage.erb
+++ b/app/views/homepage.erb
@@ -1,5 +1,3 @@
-Hello!
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,46 +26,12 @@ Hello!
     </header>
     <main>
       <h1> Requests </h1>
-      <%# <h2 id="or-maybe">Or Maybe</h2> %>
-      <%# <form action='/listings/new' method='get'>
-        <input type="submit" id='list' value="List a space" class="btn" >
-      </form>
-      <section class='dates'>
-        <form action='/listings' method='get'>
-          <div class="listings-from">
-            <label for='from'>Available from (DD/MM/YY)</label><br>
-            <input type='date' id ='from' name='available_from'
-                  value="2021-08-24"
-                  min="2021-08-01" max="2040-12-31">
-          </div>
-          <div class="listings-to">
-            <label for='to'>Available to (DD/MM/YY)</label><br>
-            <input type='date' id ='to' 
-                  name='available_to'
-                  value="2021-08-24"
-                  min="2021-08-01" max="2040-12-31">
-          </div>
-          <input id="listing-search" type='submit' value='Search'>
-        </section>
-      </form> %>
-      <div class="w3-container">
-        <h2>Listings</h2>
-
-          <% if @listings %>
-            <% @listings.each do |listing| %>
-              <div class="w3-card-4" style="width:70%">
-                <h3><%=listing.title%></h3>
-                <div class="w3-container">
-                  <p><%=listing.description%></p>
-                  <p><%=listing.price%></p>
-                </div>
-                <form action='listings/<%=listing.id%>' method='post'>
-                  <input type='hidden' name='id' value="<%=listing.id%>">
-                  <input type='submit' name='<%=listing.id%>'class="w3-button w3-block w3-dark-grey" value="Link Button">
-                </form>
-              </div> 
-            <%end%>
-          <%end%>
+        <div class="row">
+  <div class="column">Requests I've made</div>
+  <div class="column">Requests I've received</div>
+</div>
+  
+         
       </div>
     </main>
   </body>
