--- a/app/views/landingpage.erb
+++ b/app/views/landingpage.erb
@@ -16,7 +16,7 @@
       <a href="/"><img class="logo" src="/images/makersbnblogo.png" alt="MakersBNB logo" height="100px"></a>
       <nav>
         <ul>
-          <li><a href="/sessions/new">Sign Up</li></a>
+          <li><a href="/sessions/new"><span style="color:red">New? </span>Sign Up!</li></a>
           <li>   |    </li>
           <li><a href = '/login'>Login</a></li>
         </ul>
@@ -25,46 +25,11 @@
     <main>
       <h1> Book a space </h1>
       <h2 id="or-maybe">Or Maybe</h2>
-      <form action='/listings/new' method='get'>
-        <input type="submit" id='list' value="List a space" class="btn" >
+       <h1> List a space</h1>
+      <form action='/login' method='get'>
+        <input type="submit" id='list' value="Login" class="btn" >
       </form>
-      <section class='dates'>
-        <form action='/listings' method='get'>
-          <div class="listings-from">
-            <label for='from'>Available from (DD/MM/YY)</label><br>
-            <input type='date' id ='from' name='available_from'
-                  value="2021-08-24"
-                  min="2021-08-01" max="2040-12-31">
-          </div>
-          <div class="listings-to">
-            <label for='to'>Available to (DD/MM/YY)</label><br>
-            <input type='date' id ='to' 
-                  name='available_to'
-                  value="2021-08-24"
-                  min="2021-08-01" max="2040-12-31">
-          </div>
-          <input id="listing-search" type='submit' value='Search'>
-        </section>
       </form>
-      <div class="w3-container">
-        <h2>Listings</h2>
-
-          <% if @listings %>
-            <% @listings.each do |listing| %>
-              <div class="w3-card-4" style="width:70%">
-                <h3><%=listing.title%></h3>
-                <div class="w3-container">
-                  <p><%=listing.description%></p>
-                  <p><%=listing.price%></p>
-                </div>
-                <form action='listings/<%=listing.id%>' method='post'>
-                  <input type='hidden' name='id' value="<%=listing.id%>">
-                  <input type='submit' name='<%=listing.id%>'class="w3-button w3-block w3-dark-grey" value="Link Button">
-                </form>
-              </div> 
-            <%end%>
-          <%end%>
-      </div>
     </main>
   </body>
 </html>
