--- a/app/views/listings/index.erb
+++ b/app/views/listings/index.erb
@@ -34,13 +34,13 @@
       <section class='dates'>
         <form action='/listings' method='get'>
           <div class="listings-from">
-            <label for='from'>Avaliable from ' <%= @today =%></label><br>
+            <label for='from'>Avaliable from <%= @date %> </label><br>
             <input type='date' id ='from' name='avaliable_from'
                   value="2021-08-24"
                   min="2021-08-01" max="2040-12-31">
           </div>
           <div class="listings-to">
-            <label for='to'>Avaliable to (DD/MM/YY)</label><br>
+            <label for='to'>Avaliable to <%= @answer %> (DD/MM/YY)</label><br>
             <input type='date' id ='to' 
                   name='avaliable_to'
                   value="2021-08-24"
