IT WORKS! Controller talking to pages

--- a/app/views/listings/index.erb
+++ b/app/views/listings/index.erb
@@ -34,7 +34,7 @@
       <section class='dates'>
         <form action='/listings' method='get'>
           <div class="listings-from">
-            <label for='from'>Available from (DD/MM/YY)</label><br>
+            <label for='from'>Available from <%= @date %> (DD/MM/YY)</label><br>
             <input type='date' id ='from' name='available_from'
                   value="2021-08-24"
                   min="2021-08-01" max="2040-12-31">
