Listing title of booking request shows on requests page

--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -26,14 +26,16 @@
     </header>
     <main>
       <h1> Requests </h1>
-        <div class="row">
-  <div class="column" style="float: left;
-    width: 50%;">Requests I've made</div>
-  <div class="column" style="float: left;
-    width: 50%;">Requests I've received</div>
-</div>
-  
-         
+      <div class="row">
+        <div class="column" style="float: left;
+          width: 50%;">
+          <h2>Requests I've made</h2>
+          <%= @listing.title%>
+        </div>
+
+        <div class="column" style="float: left;
+          width: 50%;">Requests I've received</div>
+        </div>
       </div>
     </main>
   </body>
