user can specify start and end dates for listing and price is also written to db

--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -34,9 +34,11 @@
         <label for='list-desc'>Description: </label>
         <input type='text' id ='list-desc' name='list_desc' required>
         <label for='list-price'>Price per night (£): </label> 
-        <input type="number" min="0.00" step="1" value="10.00" id ='list-price' name='list-price' required>
-        <label for='list-dates'>Date available: </label>
-        <input type='date' id ='list-date' name='list_date' required>
+        <input type="number" min="0.00" step="1" value="10.00" id ='list-price' name='list_price' required>
+        <label for='list-from'>Available from: </label>
+        <input type='date' id ='list-from' name='list_from' required>
+        <label for='list-to'>Available to: </label>
+        <input type='date' id ='list-to' name='list_to' required>
         <input id="list-new-submit" class="btn" type='submit' value='Submit'>
       </form>
     </main>
