--- a/public/style.css
+++ b/public/style.css
@@ -206,3 +206,23 @@ input {
   height: 120px;
   width: 400px;
 }
+
+
+ (can't make paragraph left)
+#h3 {
+  width: 80%; 
+  text-align: left;
+  margin: 0 auto;
+  font-family: 'Staatliches', cursive;  
+  font-size: 200%;
+}
+
+ (can't make paragraph left)
+#paragraph {
+  display: contents;
+  width: 80%; 
+  text-align: left;
+  margin: 0 auto;
+  font-family: 'Staatliches', cursive;  
+  font-size: 100%;
+
