--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -37,6 +37,7 @@
         <div class="column" style="float: left;
           width: 50%;">
            <h2>Requests I've received</h2>
+           <%= @listings_posted.title %>
           <%= @booking_requests.date_booked %>
            </div>
 
