--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -40,7 +40,12 @@
            <h2>Requests I've received</h2>
            <%= @listings_posted.title %></br>
           <%= @booking_requests.date_booked %></br>
-          <%= @booking_requests.confirmed %>
+          <%= @booking_requests.confirmed %> </br>
+          <% if @booking_requests.confirmed %>
+          button
+          <%end%>
+          <%= @pending_requests%>
+
            </div>
 
         </div>
