--- a/public/style.css
+++ b/public/style.css
@@ -97,6 +97,13 @@ input {
   margin: 20px;
 }
 
+.listings-view {
+  display: block;
+  margin: 0 auto;
+  text-align: left;
+  width: 800px;
+}
+
 #listing-search {
   display: block;
   float: left;
@@ -205,4 +212,21 @@ input {
 #list-desc {
   height: 120px;
   width: 400px;
+}
+
+#h3 {
+  width: 80%; 
+  text-align: left;
+  margin: 0 auto;
+  font-family: 'Staatliches', cursive;  
+  font-size: 200%;
+}
+
+#paragraph {
+  display: contents;
+  width: 80%; 
+  text-align: left;
+  margin: 0 auto;
+  font-family: 'Staatliches', cursive;  
+  font-size: 100%;
 }
