--- a/app/views/listings/index.erb
+++ b/app/views/listings/index.erb
@@ -51,8 +51,10 @@
       </form>
       <div class="w3-container">
         <h2>Listings</h2>
+        <div class="about-team-section">
           <% @listings.each do |listing| %>
-            <div class="w3-card-4" style="width:70%">
+            <div class="w3-card-4">
+            <div class="listing-view">
               <h3><%=listing.title%></h3>
               <div class="w3-container">
                 <p><%=listing.description%></p>
@@ -60,10 +62,12 @@
                 <p>Available from <%=listing.start_date%></p>
                 <p>Available until <%=listing.end_date%></p>
               </div>
+              </div>
               <form action='listings/<%=listing.id%>' method='post'>
                 <input type='hidden' name='id' value="<%=listing.id%>">
                 <input type='submit' name='<%=listing.id%>'class="w3-button w3-block w3-dark-grey" value="Link Button">
               </form>
+              
             </div> 
           <%end%>
       </div>
