Hot fix minor formatting

--- a/app/views/listings/index.erb
+++ b/app/views/listings/index.erb
@@ -40,7 +40,7 @@
                   min="2021-08-01" max="2040-12-31">
           </div>
           <div class="listings-to">
-            <label for='to'>Available to (31/12/40)</label><br>
+            <label for='to'>Available to 31/12/40</label><br>
             <input type='date' id ='to' 
                   name='end_date'
                   value="2021-08-24"
