update readme and fixing some rubocop charges

--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -52,7 +52,7 @@
         <div class="about-section">
           <h3>Lizzy</h3>
         <div class="about-desc">
-            <p>Hobbies: Skulls</br>
+            <p>Hobbies: Cats</br>
               Special ability: CSS wrangling where others dare not</p>
           </div>
         </div>
