setting up for images on about

--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -33,6 +33,7 @@
           <div class="about-desc">
             <p>Hobbies: Skulls</br>
               Special ability: Active Record</p>
+              <img class="img-profile" src="">
           </div>
         </div>
         <div class="about-section">
@@ -40,6 +41,7 @@
           <div class="about-desc">
             <p>Hobbies: Teddy Bears</br>
               Special ability: PR reviews</p>
+            <img class="img-profile" src="">
           </div>
         </div>
         <div class="about-section">
@@ -47,6 +49,7 @@
         <div class="about-desc">
             <p>Hobbies: Snacks</br>
               Special ability: Drawing focus to priorities</p>
+              <img class="img-profile" src="">
           </div>
         </div>
         <div class="about-section">
@@ -54,6 +57,7 @@
         <div class="about-desc">
             <p>Hobbies: Cats</br>
               Special ability: CSS wrangling where others dare not</p>
+              <img class="img-profile" src="/images/lizzy.png">
           </div>
         </div>
       </div>
