--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -49,7 +49,7 @@
         <div class="about-desc">
             <p>Hobbies: Snacks</br>
               Special ability: Drawing focus to priorities</p>
-              <img class="img-profile" src="">
+              <img class="img-profile" src="/images/fiona.png">
           </div>
         </div>
         <div class="about-section">
