Fixed photo size for Fiona and Lizzy

--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -31,9 +31,9 @@
         <div class="about-section">
           <h3>Apps</h3>
           <div class="about-desc">
-            <p>Hobbies: Skulls</br>
+            <img class="img-profile" src="/images/fiona.png" width="300" height= auto>
+            <p>Hobbies: Skulls<br>
               Special ability: Active Record</p>
-              <img class="img-profile" src="">
           </div>
         </div>
         <div class="about-section">
@@ -49,15 +49,15 @@
         <div class="about-desc">
             <p>Hobbies: Snacks</br>
               Special ability: Drawing focus to priorities</p>
-              <img class="img-profile" src="/images/fiona.png">
+              <img class="img-profile" src="">
           </div>
         </div>
         <div class="about-section">
           <h3>Lizzy</h3>
         <div class="about-desc">
+        <img class="img-profile" src="/images/lizzy.png" width="300" height= auto>
             <p>Hobbies: Cats</br>
               Special ability: CSS wrangling where others dare not</p>
-              <img class="img-profile" src="/images/lizzy.png">
           </div>
         </div>
       </div>
