--- a/public/style.css
+++ b/public/style.css
@@ -100,6 +100,8 @@ input {
 .listings-view {
   display: block;
   margin: 0 auto;
+  text-align: left;
+  width: 800px;
 }
 
 #listing-search {
@@ -181,17 +183,12 @@ input {
   padding: 0 0 0 32px;
   float:left;
   width: 45%;
-  height: 10em;
+  
 }
 
 .about-desc {
   margin: 0 auto;
   padding: 0 24px;
-}
-
-.img-profile {
-  height: 200px;
-  width: 200px;
 }
 
 #or-maybe {
