--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -39,24 +39,24 @@
         <div class="about-section">
           <h3>Ash</h3>
           <div class="about-desc">
-            <p>Hobbies: Teddy Bears</br>
+          <img class="img-profile" src="/images/ahsan.JPG" width="300" height= auto>
+            <p>Hobbies: Teddy Bears<br>
               Special ability: PR reviews</p>
-            <img class="img-profile" src="">
           </div>
         </div>
         <div class="about-section">
           <h3>Farya</h3>
         <div class="about-desc">
-            <p>Hobbies: Snacks</br>
+        <img class="img-profile" src="/images/farya.png" width="300" height= auto>
+            <p>Hobbies: Snacks<br>
               Special ability: Drawing focus to priorities</p>
-              <img class="img-profile" src="">
           </div>
         </div>
         <div class="about-section">
           <h3>Lizzy</h3>
         <div class="about-desc">
         <img class="img-profile" src="/images/lizzy.png" width="300" height= auto>
-            <p>Hobbies: Cats</br>
+            <p>Hobbies: Cats<br>
               Special ability: CSS wrangling where others dare not</p>
           </div>
         </div>
