buttons for confirm/reject

--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -42,11 +42,11 @@
           <%= @booking_requests.date_booked %></br>
           <%= @booking_requests.confirmed %> </br>
           <%# <% if @booking_requests.confirmed %>
-          <form action='/requests' method='get'>
-            <input type="submit" id='list' value="Confirm" class="btn" >
+          <form action='/requests' method='get' style="display:inline">
+            <input type="submit" id='list' value="Confirm" class="btn2" >
           </form>
-          <form action='/requests' method='get'>
-            <input type="submit" id='list' value="Reject" class="btn" >
+          <form action='/requests' method='get' style="display:inline">
+            <input type="submit" id='list' value="Reject" class="btn2" >
           </form>
           <%# <%end%>
     
