Hot fix add pound sign
Hot fix

--- a/app/views/listings/index.erb
+++ b/app/views/listings/index.erb
@@ -58,7 +58,7 @@
               <h3><%=listing.title%></h3>
               <div class="w3-container">
                 <p><%=listing.description%></p>
-                <p><%=listing.price%></p>
+                <p>£<%=listing.price%></p>
                 <p>Available from <%=listing.start_date%></p>
                 <p>Available until <%=listing.end_date%></p>
               </div>
