hotfix to sign out

--- a/app/views/listings/index.erb
+++ b/app/views/listings/index.erb
@@ -20,7 +20,7 @@
           <li>   |    </li>
           <li>Requests</li>
           <li>   |    </li>
-          <li>Sign out</li>
+          <li><a href = '/sessions/clear'>Sign out</a></li>
         </ul>
       </nav>
     </header>
