--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -21,7 +21,7 @@
           <li>|</li>
           <li><a href="/requests">Requests</a></li>
           <li>|</li>
-          <li><a href="/logout">Log Out</a></li>
+          <li><a href = '/sessions/clear'>Sign out</a></li>
         </ul>
       </nav>
     </header>
