--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -20,7 +20,7 @@
           <li>   |    </li>
           <li>Homepage</li>
           <li>   |    </li>
-          <li><a href = '/'>Sign out</a></li>
+          <li><<a href = '/sessions/clear'>Sign out</a></li>
         </ul>
       </nav>
     </header>
